# stock-exchange-analyzer-ai

./: .env.example  .env.template  .gitignore  CHANGELOG.md  CLAUDE.md  CUSTOMIZATIONS.md  README.md  ROADMAP.md  app.py  pyproject.toml
.claude/: settings.json
.claude/agents/: implementer.md  planner.md  reviewer.md
.claude/commands/: new-module.md  verify-all.md
.claude/skills/implement/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/test/: SKILL.md
docs/: CUSTOMIZATIONS.md  METADOLOGY.md  METADOLOGY_v2.md  ROADMAP.md  SAD.md  data_fetcher.md  filters.md  providers.md  scoring.md  universe.md
docs/archive/: METADOLOGY_v1.md  METADOLOGY_v2.md
src/alphavision/: __init__.py  data_fetcher.py  filters.py  models.py  scoring.py  ticker_utils.py  universe.py
src/alphavision/providers/: __init__.py  analyst.py  fundamentals.py  prices.py
tests/: __init__.py  test_data_fetcher.py  test_filters.py  test_providers_analyst.py  test_providers_fundamentals.py  test_providers_prices.py  test_scoring.py  test_ticker_utils.py  test_universe.py
