[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphavision"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.43.0",
    "yfinance>=0.2.54",
    "pandas>=2.2.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.0",
    "azure-storage-blob>=12.25.0",
    "lxml>=5.3.0",
    "lxml-html-clean>=0.4.0",
    "requests>=2.33.1",
    "edgartools>=5.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.1.0",
    "pytest-asyncio>=0.26.0",
    "mypy>=1.15.0",
    "ruff>=0.11.0",
    "pandas-stubs>=2.2.0",
    "types-lxml>=2025.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alphavision"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN"]

[tool.mypy]
strict = true
python_version = "3.13"

[[tool.mypy.overrides]]
module = "yfinance"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "edgar"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "edgar.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-W error --cov=alphavision --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "types-requests>=2.33.0.20260408",
]
